repaired overflow for safari, animation of the model

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
+  position: relative;
   overflow-x: hidden;
 }
